# rust-ws

./: Dockerfile  README.md  docker-compose.yml
client/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
client/src/: index.html  styles.scss
client/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts  material.module.ts
client/src/app/components/chat-room/: chat-room.component.html  chat-room.component.scss  chat-room.component.ts
client/src/app/components/create-room/: create-room.component.html  create-room.component.scss  create-room.component.ts
client/src/app/components/message-input/: message-input.component.html  message-input.component.scss  message-input.component.ts
client/src/app/components/room-list/: room-list.component.html  room-list.component.scss  room-list.component.ts
client/src/app/components/system-messages/: system-messages.component.html  system-messages.component.scss  (+1 more)
client/src/app/models/: message.model.ts  message.ts  room.model.ts  room.ts
client/src/app/services/: chat.service.ts  websocket.service.ts
client/src/environments/: environment.prod.ts  environment.ts
rabbitmq/: rabbitmq.conf
server/: .dockerignore  Cargo.toml
server/src/: main.rs
server/src/handlers/: mod.rs  websocket.rs
server/src/models/: message.rs  mod.rs  topic.rs
server/src/state/: mod.rs  rabbitmq_state.rs  redis_state.rs  store.rs
server/src/utils/: auth.rs  logger.rs
src/: main.rs
src/handlers/: websocket.rs
src/models/: client.rs  message.rs
src/utils/: heartbeat.rs  logger.rs
